# restructure

./: .gitignore  README.md
Restructure/: BoundingBox.h  Color.h  Main.cpp  Math.cpp  Matrixd.h  Node.cpp  Node.h  NodeVisitor.cpp  NodeVisitor.h  Object.cpp  Object.h  Observer.cpp  Observer.h  Plane.h  Planed.h  Ray.h  Referenced.cpp  Value.cpp  Value.h  Vec2b.h  Vec2d.h  Vec2f.h  Vec3d.h  Vec3f.h  Vec3s.h  Vec4.h  Vec4b.h  Vec4d.h  Vec4f.h  Vec4s.h  Volume.h
Restructure/Debug/: CL.read.1.tlog  CL.write.1.tlog  Restructure.lastbuildstate  Restructure_manifest.rc  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog  vc100.idb
src/: CMakeLists.txt
src/Applications/: CMakeLists.txt  Main.cpp
src/lib/Reference/: BoundingBox.h  BoundingSphere.h  CMakeLists.txt  Color.cpp  FLMath.cpp  FLMath.h  Matrix.h  Matrixf.h  Node.cpp  Node.h  Object.cpp  Object.h  ObjectFactory.h  Observer.cpp  Observer.h  Planef.h  Quat.h  Referenced.cpp  Referenced.h  Value.cpp  Value.h  Vec2.h  Vec2d.h  Vec2f.h  Vec2s.h  Vec3.h  Vec3b.h  Vec3f.h  ref_ptr.h
src/lib/Reference/test_xml/: object1.xml
src/test/: CMakeLists.txt
src/test/test/: object_unit_tests.cc
